apps/homepage/homepage/templates/node-port-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-nodeport
spec:
  ports:
  - nodePort: 31994
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
  type: NodePort
